--- a/PHP01/test.html
+++ b/PHP01/test.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
+
+    <script>
+
+    </script>
 </head>
 <body>
     <h1>Persona 5 問卷調查</h1>
